Sat, 22 Dec 2007 11:44:41 +0100 <thp@perli.net>
Also delete old episodes that have disappeared from the feed

	* src/gpodder/gui.py: When deleting old episodes automatically, also
	delete episodes that have disappeared from the RSS feed and are only
	available locally; thanks to Pieter De Decker <pdedecker@gmail.com>
	for the very detailed and helpful bug report :)

Thu, 20 Dec 2007 01:33:15 +0100 <thp@perli.net>
Stability updates: Feed cache update, old PyCairo versions

	* src/gpodder/draw.py: Add a workaround for pycairo versions less than
	1.1.6. Thanks to Chris Arnold for reporting this bug on the
	gpodder-devel mailing list and taking the time to test the patch and
	report back and provide useful information for debugging this error
	* src/gpodder/gui.py: Close the feed cache update dialog even when the
	user clicks on "cancel" (would have stayed there otherwise)

Tue, 18 Dec 2007 10:13:44 +0100 <thp@perli.net>
Merge "delete episode after sync" patch from Jérôme Chabod

	* data/gpodder.glade: Add GUI elements in preferences dialog to select
	what to do after episode sync (nothing, delete or mark played)
	* src/gpodder/config.py: Add "on_sync_delete" configuration option
	* src/gpodder/gui.py: Glue "on_sync_delete" config and GUI together
	* src/gpodder/libipodsync.py: If the configuration option
	on_sync_delete is set, remove the episode after successfully copying
	it to the iPod or MP3 player (the whole patch has been initially done
	by Jérôme Chabod <jerome.chabod@france.com> with some modifications)
	* src/gpodder/libpodcasts.py: Make delete_from_disk() a bit more
	robust, so it doesn't disturb libipodsync's functionality

Mon, 17 Dec 2007 16:26:43 +0100 <thp@perli.net>
Remove invalid channel cover images when loading fails

	* src/gpodder/libpodcasts.py: Remove the cover_file of a channel when
	it cannot be loaded (assume something went wrong when downloading the
	cover file); re-downloading the cover manually can solve the problem
