@@ -1,3 +1,11 @@
+Sun, 23 Dec 2007 12:20:25 +0100 <thp@perli.net>
+Better username/password extraction from URLs
+
+	* src/gpodder/util.py: Improve username and password extraction for
+	authentication URLs; thanks to Nick <me@nikosapi.org> and Shane
+	Donohoe <priestoftime@googlemail.com> for reporting this bug and
+	sending in a patch; this should allow for e-mail address usernames
+
 Sat, 22 Dec 2007 11:44:41 +0100 <thp@perli.net>
 Also delete old episodes that have disappeared from the feed
 
